# football_json_loader

./: Cargo.toml  README.md  football_json.sqlite
src/: db.rs  json.rs  lib.rs  main.rs  model.rs
